sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:8: error: value unary_! is not a member of Int
		if (! j==0) {
                    ^